latest version added

--- a/darknet_ros_3d/darknet_ros_3d_msgs/CMakeLists.txt
+++ b/darknet_ros_3d/darknet_ros_3d_msgs/CMakeLists.txt
@@ -50,6 +50,7 @@ find_package(catkin REQUIRED COMPONENTS
    FILES
    BoundingBoxes3d.msg
    BoundingBox3d.msg
+   depth_type.msg
  )
 
 ## Generate services in the 'srv' folder
