--- a/darknet_ros_3d/darknet_ros_3d/package.xml
+++ b/darknet_ros_3d/darknet_ros_3d/package.xml
@@ -25,6 +25,7 @@
   <build_depend>tf</build_depend>
   <build_depend>pcl_ros</build_depend>
   <build_depend>pcl_conversions</build_depend>
+  <build_depend>roslint</build_depend>
 
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>darknet_ros_msgs</build_export_depend>
@@ -34,6 +35,7 @@
   <build_export_depend>tf</build_export_depend>
   <build_export_depend>pcl_ros</build_export_depend>
   <build_export_depend>pcl_conversions</build_export_depend>
+  <build_export_depend>roslint</build_export_depend>
 
   <exec_depend>roscpp</exec_depend>
   <exec_depend>darknet_ros_msgs</exec_depend>
@@ -43,6 +45,7 @@
   <exec_depend>tf</exec_depend>
   <exec_depend>pcl_ros</exec_depend>
   <exec_depend>pcl_conversions</exec_depend>
+  <exec_depend>roslint</exec_depend>
 
 
   <export>
