--- a/darknet_ros_3d/darknet_ros_3d/config/darknet_3d.yaml
+++ b/darknet_ros_3d/darknet_ros_3d/config/darknet_3d.yaml
@@ -2,3 +2,4 @@ interested_classes: ["person", "bird"]
 mininum_detection_thereshold: 0.3
 darknet_ros_topic: /darknet_ros/bounding_boxes
 point_cloud_topic: /camera/depth_registered/points
+execution_frequency: 2.0
