Separating detection algorithm code.
Signed-off-by: Francisco Martin Rico <fmrico@gmail.com>

--- a/darknet_ros_3d/darknet_ros_3d/package.xml
+++ b/darknet_ros_3d/darknet_ros_3d/package.xml
@@ -37,6 +37,7 @@
 
   <exec_depend>roscpp</exec_depend>
   <exec_depend>darknet_ros_msgs</exec_depend>
+  <exec_depend>darknet_ros</exec_depend>
   <exec_depend>darknet_ros_3d_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>tf</exec_depend>
