Include tf2_geometry_msgs as dependency
Signed-off-by: Francisco Martin Rico <fmrico@gmail.com>

--- a/darknet_ros_3d/darknet_ros_3d/CMakeLists.txt
+++ b/darknet_ros_3d/darknet_ros_3d/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(catkin REQUIRED COMPONENTS
   darknet_ros_3d_msgs
   sensor_msgs
   tf2_ros
+  tf2_geometry_msgs
   pcl_ros
   pcl_conversions
   roslint
