--- a/darknet_ros_3d/darknet_ros_3d/package.xml
+++ b/darknet_ros_3d/darknet_ros_3d/package.xml
@@ -20,6 +20,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>darknet_ros_msgs</build_depend>
   <build_depend>darknet_ros_3d_msgs</build_depend>
+  <build_depend>tf2_geometry_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>tf2_ros</build_depend>
   <build_depend>pcl_ros</build_depend>
@@ -28,6 +29,7 @@
 
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>darknet_ros_msgs</build_export_depend>
+  <build_export_depend>tf2_geometry_msgs</build_export_depend>
   <build_export_depend>darknet_ros_3d_msgs</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>tf2_ros</build_export_depend>
@@ -36,6 +38,7 @@
   <build_export_depend>roslint</build_export_depend>
 
   <exec_depend>roscpp</exec_depend>
+  <exec_depend>tf2_geometry_msgs</exec_depend>
   <exec_depend>darknet_ros_msgs</exec_depend>
   <exec_depend>darknet_ros_3d_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
