--- a/darknet_ros_3d/darknet_ros_3d/CMakeLists.txt
+++ b/darknet_ros_3d/darknet_ros_3d/CMakeLists.txt
@@ -42,6 +42,10 @@ target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
 add_executable(darknet3d_node src/darknet3d_node.cpp)
 target_link_libraries(darknet3d_node ${catkin_LIBRARIES} ${PROJECT_NAME})
 
+add_executable(darknet3d_listener_node test/darknet3d_listener_node.cpp)
+target_link_libraries(darknet3d_listener_node ${catkin_LIBRARIES} ${PROJECT_NAME})
+
+
 roslint_cpp(
   src/darknet_ros_3d/Darknet3D.cpp include/darknet_ros_3d/Darknet3D.h
   src/darknet_ros_3d/Darknet3DListener.cpp include/darknet_ros_3d/Darknet3DListener.h
