--- a/darknet_ros_3d/darknet_ros_3d/config/darknet_3d.yaml
+++ b/darknet_ros_3d/darknet_ros_3d/config/darknet_3d.yaml
@@ -3,4 +3,4 @@ output_bbx3d_topic: /darknet_ros_3d/bounding_boxes
 point_cloud_topic: /xtion/depth_registered/points
 working_frame: base_footprint
 mininum_detection_thereshold: 0.3
-interested_classes: ["person", "bottle", "book", "tie", "cup"]
+interested_classes: ["person", "italian_biscotti", "smoothie", "mango_juice", "crisps", "water", "sandwich", "toastie", "veggie_pot", "wrap", "espresso", "cappuccino", "americano"]
