--- a/darknet_ros_3d/darknet_ros_3d/config/darknet_3d.yaml
+++ b/darknet_ros_3d/darknet_ros_3d/config/darknet_3d.yaml
@@ -1,6 +1,7 @@
 darknet_ros_topic: /darknet_ros/bounding_boxes
 output_bbx3d_topic: /darknet_ros_3d/bounding_boxes
-point_cloud_topic: /xtion/depth_registered/points
-working_frame: base_footprint
+point_cloud_topic: /camera/depth_registered/points
+working_frame: camera_link
 mininum_detection_thereshold: 0.3
+minimum_probability: 0.3
 interested_classes: ["person", "italian_biscotti", "smoothie", "mango_juice", "crisps", "water", "sandwich", "toastie", "veggie_pot", "wrap", "espresso", "cappuccino", "americano"]
