--- a/.travis.yml
+++ b/.travis.yml
@@ -47,9 +47,9 @@ cache:
 language: generic
 matrix:
   include:
-  - name: "Xenial kinetic"
-    dist: xenial
-    env: ROS_DISTRO=kinetic
+  - name: "Bionic eloquent"
+    dist: bionic
+    env: ROS_DISTRO=eloquent
 #  - name: "Melodic Morenia"
 #    dist: bionic
 #    env: ROS_DISTRO=melodic
@@ -60,12 +60,12 @@ env:
   global:
     - ROS_CI_DESKTOP="`lsb_release -cs`"  # e.g. [precise|trusty|...]
     - CI_SOURCE_PATH=$(pwd)
-    - ROSINSTALL_FILE=$CI_SOURCE_PATH/dependencies.rosinstall
-    - CATKIN_OPTIONS=$CI_SOURCE_PATH/catkin.options
-    - ROS_PARALLEL_JOBS='-j8 -l6'
+    #- ROSINSTALL_FILE=$CI_SOURCE_PATH/dependencies.rosinstall
+    #- CATKIN_OPTIONS=$CI_SOURCE_PATH/catkin.options
+    #- ROS_PARALLEL_JOBS='-j8 -l6'
     # Set the python path manually to include /usr/-/python2.7/dist-packages
     # as this is where apt-get installs python packages.
-    - PYTHONPATH=$PYTHONPATH:/usr/lib/python2.7/dist-packages:/usr/local/lib/python2.7/dist-packages
+    - PYTHONPATH=$PYTHONPATH:/opt/ros/eloquent/lib/python3.6/site-packages
 
 ################################################################################
 git:
@@ -73,41 +73,49 @@ git:
     true
 # Install system dependencies, namely a very barebones ROS setup.
 before_install:
-  - sudo sh -c "echo \"deb http://packages.ros.org/ros/ubuntu $ROS_CI_DESKTOP main\" > /etc/apt/sources.list.d/ros-latest.list"
-  - sudo apt-key adv --keyserver 'hkp://keyserver.ubuntu.com:80' --recv-key C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654
-  - sudo apt-get update -qq
-  - sudo apt-get install dpkg
-  - sudo apt-get install --allow-unauthenticated -y python-catkin-pkg python-rosdep python-wstool ros-$ROS_DISTRO-ros-base
-  - source /opt/ros/$ROS_DISTRO/setup.bash
+  #- sudo sh -c "echo \"deb http://packages.ros.org/ros/ubuntu $ROS_CI_DESKTOP main\" > /etc/apt/sources.list.d/ros-latest.list"
+  #- sudo apt-key adv --keyserver 'hkp://keyserver.ubuntu.com:80' --recv-key C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654
+  #- sudo apt-get update -qq
+  #- sudo apt-get install dpkg
+  #- sudo apt-get install --allow-unauthenticated -y python-catkin-pkg python-rosdep python-wstool ros-$ROS_DISTRO-ros-base
+  #- source /opt/ros/$ROS_DISTRO/setup.bash
   # Prepare rosdep to install dependencies.
-  - sudo rosdep init
-  - rosdep update
+  #- sudo rosdep init
+  #- rosdep update
+  - sudo apt update && sudo apt install curl gnupg2 lsb-release
+  - curl -s -y https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | sudo apt-key add -
+  - sudo sh -c 'echo "deb [arch=$(dpkg --print-architecture)] http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main" > /etc/apt/sources.list.d/ros2-latest.list'
+  - sudo apt update
+  - sudo apt install -y ros-eloquent-ros-base
+  - source /opt/ros/$ROS_DISTRO/setup.bash
 
 # Create a catkin workspace with the package under integration.
 install:
-  - mkdir -p ~/catkin_ws/src
-  - cd ~/catkin_ws/src
-  - catkin_init_workspace
+  - mkdir -p ~/ros2_ws/src
+  - cd ~/ros2_ws/
+  #- catkin_init_workspace
+  - colcon build
   # Create the devel/setup.bash (run catkin_make with an empty workspace) and
   # source it to set the path variables.
-  - cd ~/catkin_ws
-  - catkin_make
-  - source devel/setup.bash
+  #- cd ~/catkin_ws
+  #- catkin_make
+  - source install/setup.bash
   # Add the package under integration to the workspace using a symlink.
-  - cd ~/catkin_ws/src
-  - ln -s $CI_SOURCE_PATH .
+  - cd ~/ros2_ws/src
+  - ln -s $CI_SOURCE_PATH
 
 # Install all dependencies, using wstool first and rosdep second.
 # wstool looks for a ROSINSTALL_FILE defined in the environment variables.
 before_script:
   # source dependencies: install using wstool.
-  - cd ~/catkin_ws/src
-  - wstool init
-  - if [[ -f $ROSINSTALL_FILE ]] ; then wstool merge $ROSINSTALL_FILE ; fi
-  - wstool up
+  #- cd ~/catkin_ws/src
+  #- wstool init
+  #- if [[ -f $ROSINSTALL_FILE ]] ; then wstool merge $ROSINSTALL_FILE ; fi
+  #- wstool up
   # package depdencies: install using rosdep.
-  - cd ~/catkin_ws
-  - rosdep install -y --from-paths src --ignore-src --rosdistro $ROS_DISTRO
+  - cd ~/ros2_ws
+  #- rosdep install -y --from-paths src --ignore-src --rosdistro $ROS_DISTRO
+  - rosdep install -i --from-path src --rosdistro $ROS_DISTRO -y
 
 # Compile and test (mark the build as failed if any step fails). If the
 # CATKIN_OPTIONS file exists, use it as an argument to catkin_make, for example
@@ -119,8 +127,9 @@ before_script:
 # non-zero when a test fails (which notifies Travis the build failed).
 script:
   - source /opt/ros/$ROS_DISTRO/setup.bash
-  - cd ~/catkin_ws
-  - catkin_make $( [ -f $CATKIN_OPTIONS ] && cat $CATKIN_OPTIONS )
+  - cd ~/ros2_ws
+  - colcon build
+  #- catkin_make $( [ -f $CATKIN_OPTIONS ] && cat $CATKIN_OPTIONS )
   # Run the tests, ensuring the path is set correctly.
-  - source devel/setup.bash
-  - catkin_make run_tests && catkin_test_results && catkin_make roslint
+  - source install/setup.bash
+  #- catkin_make run_tests && catkin_test_results && catkin_make roslint
