--- a/.travis.yml
+++ b/.travis.yml
@@ -83,7 +83,7 @@ before_install:
   #- sudo rosdep init
   #- rosdep update
   - sudo apt update && sudo apt install curl gnupg2 lsb-release
-  - curl -s -y https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | sudo apt-key add -
+  - curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | sudo apt-key add -
   - sudo sh -c 'echo "deb [arch=$(dpkg --print-architecture)] http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main" > /etc/apt/sources.list.d/ros2-latest.list'
   - sudo apt update
   - sudo apt install -y ros-eloquent-ros-base
