[.travis.yml]CI rules changed

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ matrix:
     - env: JOB_TYPE=eloquent
       script:
       # Optional: Add custom repositories for a specific job type
-      - cp additional_repos.repos .ros2ci/additional_repos.repos
+      - cp dependency_repos.repos .ros2ci/additional_repos.repos
       - .ros2ci/travis.bash $JOB_TYPE
