--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 
 matrix:
   include:
-    - env: JOB_TYPE=eloquent
+    - env: JOB_TYPE=ros2_eloquent
       script: 
         - cp dependency_repos.repos .ros2ci/additional_repos.repos
-        - .ros2ci/travis.bash $JOB_TYPE
+        - .ros2ci/travis.bash eloquent
