--- a/darknet_ros_3d/config/darknet_3d.yaml
+++ b/darknet_ros_3d/config/darknet_3d.yaml
@@ -2,8 +2,8 @@ darknet3d_node:
   ros__parameters:
     darknet_ros_topic: /darknet_ros/bounding_boxes
     output_bbx3d_topic: /darknet_ros_3d/bounding_boxes
-    point_cloud_topic: /camera/pointcloud
+    point_cloud_topic: /velodyne_points
     working_frame: camera_link
     maximum_detection_threshold: 0.2
     minimum_probability: 0.4
-    interested_classes: ["person", "book", "bottle"]
+    interested_classes: ["person"]
