Added prelimary check for ground lidar points and tf2 transform base check

--- a/darknet_ros_3d/CMakeLists.txt
+++ b/darknet_ros_3d/CMakeLists.txt
@@ -31,6 +31,7 @@ find_package(pcl_msgs REQUIRED)
 find_package(PCL REQUIRED)
 find_package(gb_visual_detection_3d_msgs)
 find_package(tf2 REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(tf2_sensor_msgs REQUIRED)
 find_package(visualization_msgs REQUIRED)
@@ -49,6 +50,7 @@ set(dependencies
   PCL
   tf2
   tf2_ros
+  tf2_geometry_msgs
   tf2_sensor_msgs
   visualization_msgs
 )
